@@ -5,42 +5,56 @@ plugins {
     alias(libs.plugins.composeMultiplatform)
     alias(libs.plugins.composeCompiler)
     alias(libs.plugins.composeHotReload)
+    alias(libs.plugins.kotlinSerialization)
 }
 
-val koinVersion = "3.5.6"
-val koinComposeVersion = "1.1.5"
-
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(17)
     jvm()
 
     sourceSets {
         commonMain.dependencies {
-            implementation(libs.filekit.core)
-            implementation(libs.filekit.dialogs.compose)
+            // Compose & UI
             implementation(libs.compose.runtime)
             implementation(libs.compose.foundation)
-            implementation(libs.material.icons.core)
-            implementation(libs.compose.material3)
             implementation(libs.compose.ui)
+            implementation(libs.compose.material3)
+            implementation(libs.compose.material3.adaptive)
             implementation(libs.compose.components.resources)
-            implementation(libs.compose.uiToolingPreview)
-            implementation(libs.androidx.lifecycle.viewmodelCompose)
-            implementation(libs.androidx.lifecycle.runtimeCompose)
-            implementation("org.jetbrains.compose.material3.adaptive:adaptive:1.0.0")
-            implementation("com.github.skydoves:colorpicker-compose:1.1.3")
-            implementation("io.insert-koin:koin-core:$koinVersion")
-            implementation("io.insert-koin:koin-compose:$koinComposeVersion")
-            implementation("com.pavi2410.kmp-app-updater:core:0.1.0")
-            implementation("com.pavi2410.kmp-app-updater:compose-ui:0.1.0")
+            implementation(libs.material.icons.core)
+            implementation(libs.colorpicker.compose)
+
+            // Lifecycle & DI
+            implementation(libs.androidx.lifecycle.viewmodel)
+            implementation(libs.androidx.lifecycle.runtime)
+            implementation(libs.koin.core)
+            implementation(libs.koin.compose)
+
+            // Ktor & Logic
+            implementation(libs.ktor.client.core)
+            implementation(libs.ktor.client.cio)
+            implementation(libs.ktor.client.content.negotiation)
+            implementation(libs.ktor.serialization.kotlinx.json)
+            implementation(libs.kotlinx.coroutines.core)
+            implementation(libs.kotlinx.serialization.json)
+            implementation(libs.kotlinx.datetime)
+
+            // File Handling
+            implementation(libs.filekit.core)
+            implementation(libs.filekit.compose)
+
+            implementation(libs.slf4j.simple)
+            implementation(libs.jcl.over.slf4j)
         }
+
         commonTest.dependencies {
             implementation(libs.kotlin.test)
         }
+
         jvmMain.dependencies {
             implementation(compose.desktop.currentOs)
-            implementation(libs.kotlinx.coroutinesSwing)
-            implementation("org.apache.pdfbox:pdfbox:3.0.1")
+            implementation(libs.kotlinx.coroutines.swing)
+            implementation(libs.apache.pdfbox)
         }
     }
 }
@@ -48,35 +62,42 @@ kotlin {
 compose.desktop {
     application {
         mainClass = "com.drewjya.pdfmaster.MainKt"
+
         buildTypes.release.proguard {
             isEnabled.set(false)
         }
+
         nativeDistributions {
-            // Added Msi and Exe for Windows
+
+//            modules("jdk.incubator.vector", "java.logging", "jdk.unsupported")
+//
+//            jvmArgs(
+//                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+//                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+//            )
+
             targetFormats(
                 TargetFormat.Dmg,
                 TargetFormat.Pkg,
                 TargetFormat.Msi,
-                TargetFormat.Exe,
+                TargetFormat.Exe
             )
 
             packageName = "PdfMaster"
-            packageVersion = "1.0.3"
+            packageVersion = "1.0.4"
 
             macOS {
                 bundleID = "com.drewjya.pdfmaster"
                 iconFile.set(project.file("icons/icon.icns"))
             }
 
-            // New block for Windows-specific installer settings
             windows {
                 iconFile.set(project.file("icons/icon.ico"))
-                menuGroup = "PdfMaster" // Creates a folder in the Start Menu
-                dirChooser = true // Lets the user pick where to install it
+                menuGroup = "PdfMaster"
+                dirChooser = true
                 perUserInstall = true
                 upgradeUuid = "100041b7-4242-4f62-bb44-395e4bc34e27"
-
-                shortcut = true // Creates a Desktop shortcut
+                shortcut = true
             }
         }
     }
